# ros-system-monitor

./: CMakeLists.txt  README  README.md  changelog  copyright  package.xml
conf/: CMakeLists.txt  ros.conf.remake
config/: system_monitor.yaml
launch/: system_monitor.launch
scripts/: mem_monitor.py  net_monitor.py  ntp_monitor.py
src/: CMakeLists.txt
src/starleth_system_monitor/conf/: CMakeLists.txt  system_monitor_starleth_hlpc.yaml  system_monitor_starleth_llpc.yaml  system_monitor_starleth_op.yaml  system_monitor_teamlio_HP_EliteBook_8530w.yaml
src/starleth_system_monitor/launch/: system_monitor.launch
src/system_monitor/launch/: CMakeLists.txt  system_monitor.launch
